--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -80,6 +80,10 @@
   transition: box-shadow 0.5s ease;
 }
 
+.auth__link {
+    justify-self: end;
+}
+
 .auth__button:hover {
   box-shadow: 0px 0px 4px #99a0a3;
 }
