--- a/src/components/FlightSearchPage/FlightSearch/FlightSearch.css
+++ b/src/components/FlightSearchPage/FlightSearch/FlightSearch.css
@@ -2,15 +2,17 @@
     margin-top: 15px;
     align-self: center;
     width: 680px;
-    min-height: 895px;
+    max-height: 895px;
+    overflow: hidden;
     background-color: #fff;
     border-radius: 20px;
     box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.25);
+    padding-bottom: 54px;
 }
 
 .flight-search__container {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    margin: 65px auto 54px auto;
+    margin: 65px auto 0 auto;
     max-width: 580px;
 }
