--- a/src/components/FlightSearchPage/FlightSearch/ImageCarousel/ImageCarousel.css
+++ b/src/components/FlightSearchPage/FlightSearch/ImageCarousel/ImageCarousel.css
@@ -1,5 +1,6 @@
 .image-carousel {
   display: flex;
+  overflow-x: scroll;
   overflow: hidden;
   margin: 24px 0 0 0;
   width: 100%;
@@ -8,9 +9,10 @@
   grid-column-start: 1;
   grid-column-end: 3;
   position: relative;
+  cursor: pointer;
 }
 
-.image-carousel::before {
+/* .image-carousel::before {
   background-image: linear-gradient(
     270deg,
     rgba(255, 255, 255, 0.8) 0%,
@@ -22,4 +24,4 @@
   position: absolute;
   width: 100%;
   height: 100%;
-}
+} */
