--- a/src/components/FlightSearchPage/FlightSearch/FlightList/FlightCard/FlightCard.css
+++ b/src/components/FlightSearchPage/FlightSearch/FlightList/FlightCard/FlightCard.css
@@ -63,12 +63,18 @@
     grid-template-columns: repeat(2, auto);
 }
 
+.flight-card__container2 {
+    min-width: 110px;
+    display: grid;
+    grid-template-columns: auto
+}
+
 .flight-card__like-btn {
     background-image: url(../../../../../images/icons/like-default-icon.png);
     background-size: contain;
     background-color: transparent;
     background-repeat: no-repeat;
-    grid-column: 2;
+    grid-column: 1;
     width: 21px;
     height: 18px;
     border: none;
@@ -88,7 +94,8 @@
     color: #878787;
     margin: 0;
     align-self: flex-end;
-    grid-column: 2;
+    justify-self: end;
+    grid-column: 1;
 }
 
 .price__accent {
